tests/snapshots/lexer_snapshots__lexer_all@tokens-5.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/language/05_if_block_expressions.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "classify",
            ),
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: LeftParen,
            position: 18,
            line: 1,
            column: 19,
        },
        Token {
            token_type: Identifier(
                "age",
            ),
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: Colon,
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 26,
            line: 1,
            column: 27,
        },
        Token {
            token_type: RightParen,
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: Colon,
            position: 28,
            line: 1,
            column: 29,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: LeftBrace,
            position: 34,
            line: 1,
            column: 35,
        },
        Token {
            token_type: Var,
            position: 40,
            line: 2,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "status",
            ),
            position: 47,
            line: 2,
            column: 13,
        },
        Token {
            token_type: Eq,
            position: 49,
            line: 2,
            column: 15,
        },
        Token {
            token_type: If,
            position: 52,
            line: 2,
            column: 18,
        },
        Token {
            token_type: LeftParen,
            position: 54,
            line: 2,
            column: 20,
        },
        Token {
            token_type: Identifier(
                "age",
            ),
            position: 57,
            line: 2,
            column: 23,
        },
        Token {
            token_type: GT,
            position: 59,
            line: 2,
            column: 25,
        },
        Token {
            token_type: Eq,
            position: 60,
            line: 2,
            column: 26,
        },
        Token {
            token_type: Int(
                "65",
            ),
            position: 63,
            line: 2,
            column: 29,
        },
        Token {
            token_type: RightParen,
            position: 64,
            line: 2,
            column: 30,
        },
        Token {
            token_type: LeftBrace,
            position: 66,
            line: 2,
            column: 32,
        },
        Token {
            token_type: StringLit(
                "Senior",
            ),
            position: 79,
            line: 3,
            column: 13,
        },
        Token {
            token_type: RightBrace,
            position: 83,
            line: 4,
            column: 4,
        },
        Token {
            token_type: Else,
            position: 88,
            line: 4,
            column: 9,
        },
        Token {
            token_type: If,
            position: 91,
            line: 4,
            column: 12,
        },
        Token {
            token_type: LeftParen,
            position: 93,
            line: 4,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "age",
            ),
            position: 96,
            line: 4,
            column: 17,
        },
        Token {
            token_type: GT,
            position: 98,
            line: 4,
            column: 19,
        },
        Token {
            token_type: Eq,
            position: 99,
            line: 4,
            column: 20,
        },
        Token {
            token_type: Int(
                "18",
            ),
            position: 102,
            line: 4,
            column: 23,
        },
        Token {
            token_type: RightParen,
            position: 103,
            line: 4,
            column: 24,
        },
        Token {
            token_type: LeftBrace,
            position: 105,
            line: 4,
            column: 26,
        },
        Token {
            token_type: StringLit(
                "Adult",
            ),
            position: 117,
            line: 5,
            column: 12,
        },
        Token {
            token_type: RightBrace,
            position: 121,
            line: 6,
            column: 4,
        },
        Token {
            token_type: Else,
            position: 126,
            line: 6,
            column: 9,
        },
        Token {
            token_type: LeftBrace,
            position: 128,
            line: 6,
            column: 11,
        },
        Token {
            token_type: StringLit(
                "Minor",
            ),
            position: 140,
            line: 7,
            column: 12,
        },
        Token {
            token_type: RightBrace,
            position: 144,
            line: 8,
            column: 4,
        },
        Token {
            token_type: Semicolon,
            position: 145,
            line: 8,
            column: 5,
        },
        Token {
            token_type: Var,
            position: 152,
            line: 10,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "msg",
            ),
            position: 156,
            line: 10,
            column: 10,
        },
        Token {
            token_type: Eq,
            position: 158,
            line: 10,
            column: 12,
        },
        Token {
            token_type: LeftBrace,
            position: 160,
            line: 10,
            column: 14,
        },
        Token {
            token_type: Var,
            position: 168,
            line: 11,
            column: 8,
        },
        Token {
            token_type: Identifier(
                "prefix",
            ),
            position: 175,
            line: 11,
            column: 15,
        },
        Token {
            token_type: Eq,
            position: 177,
            line: 11,
            column: 17,
        },
        Token {
            token_type: StringLit(
                "Status: ",
            ),
            position: 188,
            line: 11,
            column: 28,
        },
        Token {
            token_type: Semicolon,
            position: 189,
            line: 11,
            column: 29,
        },
        Token {
            token_type: Var,
            position: 197,
            line: 12,
            column: 8,
        },
        Token {
            token_type: Identifier(
                "suffix",
            ),
            position: 204,
            line: 12,
            column: 15,
        },
        Token {
            token_type: Eq,
            position: 206,
            line: 12,
            column: 17,
        },
        Token {
            token_type: StringLit(
                " (age ",
            ),
            position: 215,
            line: 12,
            column: 26,
        },
        Token {
            token_type: Plus,
            position: 217,
            line: 12,
            column: 28,
        },
        Token {
            token_type: LeftParen,
            position: 219,
            line: 12,
            column: 30,
        },
        Token {
            token_type: Identifier(
                "age",
            ),
            position: 222,
            line: 12,
            column: 33,
        },
        Token {
            token_type: As,
            position: 225,
            line: 12,
            column: 36,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 229,
            line: 12,
            column: 40,
        },
        Token {
            token_type: RightParen,
            position: 230,
            line: 12,
            column: 41,
        },
        Token {
            token_type: Plus,
            position: 232,
            line: 12,
            column: 43,
        },
        Token {
            token_type: StringLit(
                ")",
            ),
            position: 236,
            line: 12,
            column: 47,
        },
        Token {
            token_type: Semicolon,
            position: 237,
            line: 12,
            column: 48,
        },
        Token {
            token_type: Identifier(
                "prefix",
            ),
            position: 248,
            line: 13,
            column: 11,
        },
        Token {
            token_type: Plus,
            position: 250,
            line: 13,
            column: 13,
        },
        Token {
            token_type: Identifier(
                "status",
            ),
            position: 257,
            line: 13,
            column: 20,
        },
        Token {
            token_type: Plus,
            position: 259,
            line: 13,
            column: 22,
        },
        Token {
            token_type: Identifier(
                "suffix",
            ),
            position: 266,
            line: 13,
            column: 29,
        },
        Token {
            token_type: RightBrace,
            position: 270,
            line: 14,
            column: 4,
        },
        Token {
            token_type: Semicolon,
            position: 271,
            line: 14,
            column: 5,
        },
        Token {
            token_type: Identifier(
                "msg",
            ),
            position: 278,
            line: 16,
            column: 6,
        },
        Token {
            token_type: RightBrace,
            position: 280,
            line: 17,
            column: 2,
        },
        Token {
            token_type: Function,
            position: 290,
            line: 19,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "main",
            ),
            position: 295,
            line: 19,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 296,
            line: 19,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 297,
            line: 19,
            column: 16,
        },
        Token {
            token_type: Colon,
            position: 298,
            line: 19,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 302,
            line: 19,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 304,
            line: 19,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 312,
            line: 20,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 313,
            line: 20,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "classify",
            ),
            position: 321,
            line: 20,
            column: 17,
        },
        Token {
            token_type: LeftParen,
            position: 322,
            line: 20,
            column: 18,
        },
        Token {
            token_type: Int(
                "8",
            ),
            position: 323,
            line: 20,
            column: 19,
        },
        Token {
            token_type: RightParen,
            position: 324,
            line: 20,
            column: 20,
        },
        Token {
            token_type: RightParen,
            position: 325,
            line: 20,
            column: 21,
        },
        Token {
            token_type: Semicolon,
            position: 326,
            line: 20,
            column: 22,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 334,
            line: 21,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 335,
            line: 21,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "classify",
            ),
            position: 343,
            line: 21,
            column: 17,
        },
        Token {
            token_type: LeftParen,
            position: 344,
            line: 21,
            column: 18,
        },
        Token {
            token_type: Int(
                "30",
            ),
            position: 346,
            line: 21,
            column: 20,
        },
        Token {
            token_type: RightParen,
            position: 347,
            line: 21,
            column: 21,
        },
        Token {
            token_type: RightParen,
            position: 348,
            line: 21,
            column: 22,
        },
        Token {
            token_type: Semicolon,
            position: 349,
            line: 21,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 357,
            line: 22,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 358,
            line: 22,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "classify",
            ),
            position: 366,
            line: 22,
            column: 17,
        },
        Token {
            token_type: LeftParen,
            position: 367,
            line: 22,
            column: 18,
        },
        Token {
            token_type: Int(
                "72",
            ),
            position: 369,
            line: 22,
            column: 20,
        },
        Token {
            token_type: RightParen,
            position: 370,
            line: 22,
            column: 21,
        },
        Token {
            token_type: RightParen,
            position: 371,
            line: 22,
            column: 22,
        },
        Token {
            token_type: Semicolon,
            position: 372,
            line: 22,
            column: 23,
        },
        Token {
            token_type: Int(
                "0",
            ),
            position: 376,
            line: 23,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 378,
            line: 24,
            column: 2,
        },
    ],
)
