tests/snapshots/lexer_snapshots__lexer_all@tokens-50.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/whitespace_only_returns_eof.of
---
Ok(
    [],
)
