tests/snapshots/lexer_snapshots__lexer_all@tokens-55.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/parser/parse_expr_binary_precedence.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "test",
            ),
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "x",
            ),
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: Plus,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: Identifier(
                "y",
            ),
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: Star,
            position: 25,
            line: 1,
            column: 26,
        },
        Token {
            token_type: Identifier(
                "z",
            ),
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: Semicolon,
            position: 28,
            line: 1,
            column: 29,
        },
        Token {
            token_type: RightBrace,
            position: 30,
            line: 1,
            column: 31,
        },
    ],
)
