tests/snapshots/lexer_snapshots__lexer_all@tokens-6.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/language/06_unions.of
---
Ok(
    [
        Token {
            token_type: Import,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: LeftBrace,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightBrace,
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: From,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: StringLit(
                "of:core",
            ),
            position: 31,
            line: 1,
            column: 32,
        },
        Token {
            token_type: Semicolon,
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: Type,
            position: 38,
            line: 3,
            column: 5,
        },
        Token {
            token_type: Identifier(
                "Value",
            ),
            position: 44,
            line: 3,
            column: 11,
        },
        Token {
            token_type: Eq,
            position: 46,
            line: 3,
            column: 13,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 50,
            line: 3,
            column: 17,
        },
        Token {
            token_type: Pipe,
            position: 52,
            line: 3,
            column: 19,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 56,
            line: 3,
            column: 23,
        },
        Token {
            token_type: Pipe,
            position: 58,
            line: 3,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "bool",
            ),
            position: 63,
            line: 3,
            column: 30,
        },
        Token {
            token_type: Semicolon,
            position: 64,
            line: 3,
            column: 31,
        },
        Token {
            token_type: Function,
            position: 74,
            line: 5,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "describe",
            ),
            position: 83,
            line: 5,
            column: 18,
        },
        Token {
            token_type: LeftParen,
            position: 84,
            line: 5,
            column: 19,
        },
        Token {
            token_type: Identifier(
                "v",
            ),
            position: 85,
            line: 5,
            column: 20,
        },
        Token {
            token_type: Colon,
            position: 86,
            line: 5,
            column: 21,
        },
        Token {
            token_type: Identifier(
                "Value",
            ),
            position: 92,
            line: 5,
            column: 27,
        },
        Token {
            token_type: RightParen,
            position: 93,
            line: 5,
            column: 28,
        },
        Token {
            token_type: Colon,
            position: 94,
            line: 5,
            column: 29,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 98,
            line: 5,
            column: 33,
        },
        Token {
            token_type: LeftBrace,
            position: 100,
            line: 5,
            column: 35,
        },
        Token {
            token_type: If,
            position: 105,
            line: 6,
            column: 5,
        },
        Token {
            token_type: LeftParen,
            position: 107,
            line: 6,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "v",
            ),
            position: 108,
            line: 6,
            column: 8,
        },
        Token {
            token_type: Is,
            position: 111,
            line: 6,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 115,
            line: 6,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 116,
            line: 6,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 118,
            line: 6,
            column: 18,
        },
        Token {
            token_type: StringLit(
                "int: ",
            ),
            position: 130,
            line: 7,
            column: 12,
        },
        Token {
            token_type: Plus,
            position: 132,
            line: 7,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 134,
            line: 7,
            column: 16,
        },
        Token {
            token_type: LeftParen,
            position: 135,
            line: 7,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "v",
            ),
            position: 136,
            line: 7,
            column: 18,
        },
        Token {
            token_type: As,
            position: 139,
            line: 7,
            column: 21,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 143,
            line: 7,
            column: 25,
        },
        Token {
            token_type: RightParen,
            position: 144,
            line: 7,
            column: 26,
        },
        Token {
            token_type: As,
            position: 147,
            line: 7,
            column: 29,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 151,
            line: 7,
            column: 33,
        },
        Token {
            token_type: RightParen,
            position: 152,
            line: 7,
            column: 34,
        },
        Token {
            token_type: RightBrace,
            position: 156,
            line: 8,
            column: 4,
        },
        Token {
            token_type: Else,
            position: 161,
            line: 8,
            column: 9,
        },
        Token {
            token_type: If,
            position: 164,
            line: 8,
            column: 12,
        },
        Token {
            token_type: LeftParen,
            position: 166,
            line: 8,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "v",
            ),
            position: 167,
            line: 8,
            column: 15,
        },
        Token {
            token_type: Is,
            position: 170,
            line: 8,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "bool",
            ),
            position: 175,
            line: 8,
            column: 23,
        },
        Token {
            token_type: RightParen,
            position: 176,
            line: 8,
            column: 24,
        },
        Token {
            token_type: LeftBrace,
            position: 178,
            line: 8,
            column: 26,
        },
        Token {
            token_type: StringLit(
                "bool: ",
            ),
            position: 191,
            line: 9,
            column: 13,
        },
        Token {
            token_type: Plus,
            position: 193,
            line: 9,
            column: 15,
        },
        Token {
            token_type: LeftParen,
            position: 195,
            line: 9,
            column: 17,
        },
        Token {
            token_type: LeftParen,
            position: 196,
            line: 9,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "v",
            ),
            position: 197,
            line: 9,
            column: 19,
        },
        Token {
            token_type: As,
            position: 200,
            line: 9,
            column: 22,
        },
        Token {
            token_type: Identifier(
                "bool",
            ),
            position: 205,
            line: 9,
            column: 27,
        },
        Token {
            token_type: RightParen,
            position: 206,
            line: 9,
            column: 28,
        },
        Token {
            token_type: As,
            position: 209,
            line: 9,
            column: 31,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 213,
            line: 9,
            column: 35,
        },
        Token {
            token_type: RightParen,
            position: 214,
            line: 9,
            column: 36,
        },
        Token {
            token_type: RightBrace,
            position: 218,
            line: 10,
            column: 4,
        },
        Token {
            token_type: Else,
            position: 223,
            line: 10,
            column: 9,
        },
        Token {
            token_type: LeftBrace,
            position: 225,
            line: 10,
            column: 11,
        },
        Token {
            token_type: StringLit(
                "str: ",
            ),
            position: 237,
            line: 11,
            column: 12,
        },
        Token {
            token_type: Plus,
            position: 239,
            line: 11,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 241,
            line: 11,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "v",
            ),
            position: 242,
            line: 11,
            column: 17,
        },
        Token {
            token_type: As,
            position: 245,
            line: 11,
            column: 20,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 249,
            line: 11,
            column: 24,
        },
        Token {
            token_type: RightParen,
            position: 250,
            line: 11,
            column: 25,
        },
        Token {
            token_type: RightBrace,
            position: 254,
            line: 12,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 256,
            line: 13,
            column: 2,
        },
        Token {
            token_type: Function,
            position: 266,
            line: 15,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "main",
            ),
            position: 271,
            line: 15,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 272,
            line: 15,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 273,
            line: 15,
            column: 16,
        },
        Token {
            token_type: Colon,
            position: 274,
            line: 15,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 278,
            line: 15,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 280,
            line: 15,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 288,
            line: 16,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 289,
            line: 16,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "describe",
            ),
            position: 297,
            line: 16,
            column: 17,
        },
        Token {
            token_type: LeftParen,
            position: 298,
            line: 16,
            column: 18,
        },
        Token {
            token_type: Int(
                "42",
            ),
            position: 300,
            line: 16,
            column: 20,
        },
        Token {
            token_type: RightParen,
            position: 301,
            line: 16,
            column: 21,
        },
        Token {
            token_type: RightParen,
            position: 302,
            line: 16,
            column: 22,
        },
        Token {
            token_type: Semicolon,
            position: 303,
            line: 16,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 311,
            line: 17,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 312,
            line: 17,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "describe",
            ),
            position: 320,
            line: 17,
            column: 17,
        },
        Token {
            token_type: LeftParen,
            position: 321,
            line: 17,
            column: 18,
        },
        Token {
            token_type: StringLit(
                "hello",
            ),
            position: 328,
            line: 17,
            column: 25,
        },
        Token {
            token_type: RightParen,
            position: 329,
            line: 17,
            column: 26,
        },
        Token {
            token_type: RightParen,
            position: 330,
            line: 17,
            column: 27,
        },
        Token {
            token_type: Semicolon,
            position: 331,
            line: 17,
            column: 28,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 339,
            line: 18,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 340,
            line: 18,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "describe",
            ),
            position: 348,
            line: 18,
            column: 17,
        },
        Token {
            token_type: LeftParen,
            position: 349,
            line: 18,
            column: 18,
        },
        Token {
            token_type: True,
            position: 353,
            line: 18,
            column: 22,
        },
        Token {
            token_type: RightParen,
            position: 354,
            line: 18,
            column: 23,
        },
        Token {
            token_type: RightParen,
            position: 355,
            line: 18,
            column: 24,
        },
        Token {
            token_type: Semicolon,
            position: 356,
            line: 18,
            column: 25,
        },
        Token {
            token_type: Int(
                "0",
            ),
            position: 360,
            line: 19,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 362,
            line: 20,
            column: 2,
        },
    ],
)
