tests/snapshots/lexer_snapshots__lexer_all@tokens-62.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/parser/parse_error_unexpected_token_at_item.of
---
Ok(
    [
        Token {
            token_type: Int(
                "42",
            ),
            position: 2,
            line: 1,
            column: 3,
        },
    ],
)
